adicionei uma frase

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h3>"Organize sua vida, conquiste seus objetivos. Sua jornada começa aqui, com nossa lista de tarefas simplificada. Gerencie, planeje e alcance mais a cada dia."</h3>
     <div class="container">
         <h1>Lista de Tarefas</h1>
         <div id="taskInputContainer">
